# MS_Flex_Custom_Policy

./: .gitignore
PDKTests/: configWithEnvVariable.sh  getBearForConnectedAppPDK.sh  namDemoPDK.sh  onlineNamDemoPDK.sh
PDKTests/axa-header/: Cargo.toml  Makefile  README.md  manifest.yaml  policy-impl-metadata.yaml  policy-metadata.yaml  policy-schema.json
PDKTests/axa-header/src/: config.rs  lib.rs
PDKTests/axa-header/test/config/: api.yaml
PDKTests/flexPdk/: registration.yaml
PDKTests/pdk-template/: Cargo.toml  Makefile  README.md  cargo-generate.toml
PDKTests/pdk-template-claudio/: Makefile  cargo-generate.toml  init-script.rhai  manifest.yaml  policy-impl-metadata.yaml  policy-metadata.yaml  policy-schema.json  post-script.rhai
PDKTests/pdk-template-claudio/.pdk/pdk/: Cargo.toml
PDKTests/pdk-template-claudio/.pdk/pdk/classy/src/: bootstrap.rs  context.rs  event.rs  lib.rs  middleware.rs
PDKTests/pdk-template-claudio/.pdk/pdk/classy/src/context/: error.rs  http.rs
PDKTests/pdk-template-claudio/.pdk/pdk/classy/src/extract/: config.rs  from_context.rs
PDKTests/pdk-template-claudio/.pdk/pdk/pdk/: Cargo.toml
PDKTests/pdk-template-claudio/.pdk/pdk/pdk-core/src/host/context/: http.rs  mod.rs
PDKTests/pdk-template-claudio/.pdk/pdk/pdk-core/src/log/: logger.rs  mod.rs
PDKTests/pdk-template-claudio/.pdk/pdk/pdk-core/src/policy_context/: authentication.rs  metadata.rs  mod.rs
PDKTests/pdk-template-claudio/.pdk/pdk/pdk-macros/src/entrypoint/: mod.rs
PDKTests/pdk-template-claudio/.pdk/pdk/pel/: Cargo.toml
PDKTests/pdk-template-claudio/.pdk/pdk/pel-binding/: Cargo.toml
PDKTests/pdk-template-claudio/.pdk/pdk/pel-binding/src/: convert.rs  error.rs  lib.rs  resolver.rs
PDKTests/pdk-template-claudio/.pdk/pdk/pel/src/: lib.rs
PDKTests/pdk-template-claudio/.pdk/pdk/pel/src/runtime/: coercion.rs  value.rs
PDKTests/pdk-template-claudio/src/: config.rs
PDKTests/pdk-template-claudio/test/config/: api.yaml
PDKTests/pdk-template/.pdk/docs/getting_started/: GETTING_STARTED.md
PDKTests/pdk-template/.pdk/pdk/: LICENSE_HEADER.txt
PDKTests/pdk-template/.pdk/pdk/.cargo/: config
PDKTests/pdk-template/.pdk/pdk/classy/: Cargo.toml
PDKTests/pdk-template/.pdk/pdk/classy/src/: client.rs  entrypoint.rs  extract.rs  handler.rs  host.rs  http_constants.rs  macros.rs  plugin.rs  reactor.rs  types.rs
PDKTests/pdk-template/.pdk/pdk/classy/src/context/: root.rs
PDKTests/pdk-template/.pdk/pdk/classy/src/extract/: context.rs
PDKTests/pdk-template/.pdk/pdk/classy/src/reactor/: http.rs  root.rs  tests.rs
PDKTests/pdk-template/.pdk/pdk/pdk-core/: Cargo.toml
PDKTests/pdk-template/.pdk/pdk/pdk-core/src/: init.rs  lib.rs  middleware.rs
PDKTests/pdk-template/.pdk/pdk/pdk-core/src/host/: mod.rs
PDKTests/pdk-template/.pdk/pdk/pdk-core/src/host/context/: root.rs
PDKTests/pdk-template/.pdk/pdk/pdk-core/src/host/property/: properties.rs
PDKTests/pdk-template/.pdk/pdk/pdk-core/src/log/: log_metadata.rs
PDKTests/pdk-template/.pdk/pdk/pdk-core/src/policy_context/: static_policy_context_cache.rs
PDKTests/pdk-template/.pdk/pdk/pdk-macros/: Cargo.toml
PDKTests/pdk-template/.pdk/pdk/pdk-macros/src/: lib.rs
PDKTests/pdk-template/.pdk/pdk/pdk-macros/src/entrypoint/: args.rs  tests.rs
PDKTests/pdk-template/.pdk/pdk/pdk/src/: lib.rs
PDKTests/pdk-template/.pdk/pdk/pel-binding/src/: custom_getrandom.rs
PDKTests/pdk-template/.pdk/pdk/pel/src/: expression.rs  parser.rs
PDKTests/pdk-template/.pdk/pdk/pel/src/runtime/: eval.rs  mod.rs  prelude.rs  value_handler.rs
PDKTests/pdk-template/src/: lib.rs
axa-context-header-flex-policy/: policy-schema.json
axa-context-header-flex-policy/src/: jwt.rs  lib.rs
axa-context-header-flex-policy/test/config/: api-http.yaml  api-https.yaml
flex_gateway_custom_policy_statuscode-main/: .project  Cargo.toml  README.md  implementation-metadata.yaml  policy-definition.json  policy-definition.yaml
flex_gateway_custom_policy_statuscode-main/src/: lib.rs
mgw-azure-application-insights-policy-main/: .gitignore  .project  Cargo.toml  Makefile  README.md  definition-metadata.yaml  definition-schema.json  implementation-metadata.yaml  manifest.yaml
mgw-azure-application-insights-policy-main/src/: date_time.rs  lib.rs  model.rs  tracking.rs
mgw-azure-application-insights-policy-main/test/: docker-compose.yaml
mgw-azure-application-insights-policy-main/test/config/: api.yaml
mule-flex-axa-context-header/: .project  Cargo.toml  goodPublic.txt  implementation-metadata.yaml  policy-definition.json  policy-definition.yaml
mule-flex-axa-context-header-pdk/: Cargo.toml  Makefile  README.md  manifest.yaml  policy-impl-metadata.yaml  policy-metadata.yaml  policy-schema.json
mule-flex-axa-context-header-pdk/src/: config.rs  jwt.rs  lib.rs
mule-flex-axa-context-header-pdk/test/: AXA - Context Header POC.postman_collection.json  docker-compose.yaml
mule-flex-axa-context-header-pdk/test/config/: api-http.yaml  api-https.yaml
mule-flex-axa-context-header/src/: lib.rs  toto.rs
mule-flex-data-masking/: .project  definition.yaml  implementation.yaml  schema.json
mule-flex-data-masking/src/: lib.rs
mule-flex-request-size/: Cargo.toml  README.md  definition.yaml  implementation.yaml  payloadSample.json  schema.json
mule-flex-request-size/src/: lib.rs  lib.rs_OLD  lib.rs_maxSize
mule-flex-request-size/workAxaContextHeader/: main.rs
playground/: Cargo.toml  private_key.pem  public_key.pem
playground/src/: encode.rs  main  main copy 2.rs  main copy.rs  main.rs
(+1 files in other folders)
