[package]
name = "azure_application_insights"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name="azure_application_insights"
path="src/lib.rs"


[dependencies]
proxy-wasm = { git = "https://github.com/proxy-wasm/proxy-wasm-rust-sdk.git", tag = "v0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
astrolabe = "0.2.0"
sha1 = "0.10"