# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "axa_context_header"
version = "0.1.0"
authors = ["Nam Ton That <ntonthat@mulesoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdk = { path = ".pdk/pdk/pdk" }
pdk-core = { path = ".pdk/pdk/pdk-core", package = "pdk-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0.64"
log = "0.4"
jwt-simple = "0.11.6"
base64 = "0.12"
regex = "1"

[lib]
crate-type = ["cdylib"]
