# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "pdk-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.57", features = ["full", "fold"] }
quote = "1.0.8"
proc-macro2 = "1.0"
